# LppNews

./: README.md  connection.py  main.py  requirements.txt  utils.py
App/: pyproject.toml
App/src/: artigos.py  comite.py  coordenadores.py  databaseConn.py  docentes.py  equipamentos.py  equipe.py  estudantes.py  login.py  main.py  network.py  noticias.py  publicacoes.py
App/src/utils/: toast.py
App/src/webComponents/: artigos.py  comite.py  componentList.py  coordenadores.py  customTile.py  docentes.py  equipamentos.py  noticias.py  publicacoes.py
App/src/webComponents/membersComponents/: comite.py  coordenadores.py  docentes.py  equipe.py  estudantes.py
LppNews/: README.md  pyproject.toml
LppNews/src/: main.py
LppNews/src/setup/: databaseConn.py  login.py
LppNews/src/utils/: uploadImgur.py
LppNews/src/webComponents/: __init__.py  artigos.py  componentList.py  equipamentos.py  noticias.py  publicacoes.py
LppNews/src/webComponents/membersComponents/: __init__.py  comite.py  coordenadores.py  docentes.py  equipe.py  estudantes.py
