[project]
name = "LppNews"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Pedro Andrade", email = "redbrickcar2@gmail.com" }
]
dependencies = [
  "flet==0.28.3",
  "requests==2.32.3",
  "gitpython==3.1.*",
  "pynpm==0.2.*",
  "scp==0.15.*",
  "pandas",
  "sshtunnel",
  "mariadb",
  "setuptools",
  "paramiko==3.5.*",
  "pyinstaller"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.LemBio"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "LppNews"

# company name to display in about app dialogs
company = "LemBio"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Pedro Andrade"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
    "requests==2.32.3",
    "gitpython==3.1.*",
    "pynpm==0.2.*",
    "scp==0.15.*",
    "pandas",
    "sshtunnel",
    "mariadb",
    "setuptools",
    "paramiko==3.5.*",
    "pyinstaller"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}